--- a/Seguros_1/src/main/webapp/css/style.css
+++ b/Seguros_1/src/main/webapp/css/style.css
@@ -64,7 +64,14 @@ main{
     padding: 12px 0 12px 43px;
 }
 
-
+.aboutUs-wrapper{
+    display: block;
+}
+.aboutUs-wrapper h1 p img{
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
 
 .footer{
     position: fixed;
@@ -108,3 +115,20 @@ input[type=text].is-invalid,input[type=password].is-invalid{
     background-image: url("/Banca/images/is-invalid.png");    
 }
 
+
+
+/*AQUI VA LA TABLA DE LAS POLIZAS CON SUS CLIENTES*/
+
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid gray;
+}
+
+tr:hover {background-color:#f5f5f5;}
